--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
                     <h1><span>Olhar</span><span>Diferente</span></h1>
                 </div>
                 <nav id="nav">
-                    <button class="btn-menu" id="btn-js"></button>
+                    <button class="btn-menu" id="btn-js">
+                        <span id="hamburguer"></span>
+                    </button>
                     <ul>
                         <li><a href="#">SOBRE NÓS</a></li>
                         <li><a href="#">AÇÕES DO PROJETO</a></li>
@@ -27,7 +29,12 @@
         </header>
 
         <main>
-
+            <section></section>
+            <section></section>
+            <section></section>
+            <section></section>
+            <section></section>
+            <section></section>
         </main>
 
         <footer>
