primeira seção ok

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,20 +8,21 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Olhar Diferente</title>
 </head>
+
 <body>
     <div>
         <header>
-            <div class="cabecalho">
+            <div class="cabecalho container-padding">
                 <div class="logo">
                     <img src="imgs/olhar diferente - logo.png" alt="">
-                    <h1><span>Olhar</span><span>Diferente</span></h1>
+                    <h1>OlharDiferente</h1>
                 </div>
                 <nav id="nav">
                     <button class="btn-menu" id="btn-js">
                         <span id="hamburguer"></span>
                     </button>
                     <ul>
-                        <li><a href="#">SOBRE NÓS</a></li>
+                        <li><a href="#sobre-nos">SOBRE NÓS</a></li>
                         <li><a href="#">AÇÕES DO PROJETO</a></li>
                         <li><a href="#">CONTATO</a></li>
                     </ul>
@@ -29,8 +31,33 @@
         </header>
 
         <main>
-            <section></section>
-            <section></section>
+            <section class="secao-1">
+                <div class="container-padding container-text-1">
+                    <h1>Associação</h1>
+                    <h1 class="olharDiferente">Olhar Diferente</h1>
+                    <p><span>Juntos</span>, podemos fazer a <span>diferença</span> na vida dos necessitados. Seja a mudança que o mundo
+                        precisa - <span>doe</span>, <span>participe</span> e <span>transforme vidas</span>.</p>
+                    <a href="#">DOAR</a>
+                </div>
+            </section>
+
+            <section class="secao-2" id="sobre-nos">
+                <div class="container-padding">
+                    <h1>Sobre Nós</h1>
+                    <div>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos quo eveniet minus!
+                            Quisquam ullam, fuga amet nulla sed deleniti illum voluptates aperiam ut vitae. Placeat non
+                            officiis excepturi esse iusto! Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
+                            assumenda deleniti sed nisi eligendi voluptate. Deserunt, iusto optio ab quidem, suscipit
+                            cumque est molestiae mollitia inventore, quibusdam eos iste? Nesciunt!</p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos quo eveniet minus!
+                            Quisquam ullam, fuga amet nulla sed deleniti illum voluptates aperiam ut vitae. Placeat non
+                            officiis excepturi esse iusto! Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
+                            assumenda deleniti sed nisi eligendi voluptate. Deserunt, iusto optio ab quidem, suscipit
+                            cumque est molestiae mollitia inventore, quibusdam eos iste? Nesciunt!</p>
+                    </div>
+                </div>
+            </section>
             <section></section>
             <section></section>
             <section></section>
@@ -44,4 +71,5 @@
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
