mudei a estrutura da pasta

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="imgs/olhar diferente - logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="./assets/imgs/olhar diferente - logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Olhar Diferente</title>
 </head>
 
@@ -14,7 +14,7 @@
         <header>
             <div class="cabecalho container-padding">
                 <div class="logo">
-                    <img src="imgs/olhar diferente - logo.png" alt="">
+                    <img src="./assets/imgs/olhar diferente - logo.png" alt="">
                     <h1>OlharDiferente</h1>
                 </div>
                 <nav id="nav">
@@ -69,7 +69,7 @@
         </footer>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
