--- a/index.html
+++ b/index.html
@@ -42,19 +42,24 @@
             </section>
 
             <section class="secao-2" id="sobre-nos">
-                <div class="container-padding">
+                <div class="container-padding container-text-2">
                     <h1>Sobre Nós</h1>
                     <div>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos quo eveniet minus!
-                            Quisquam ullam, fuga amet nulla sed deleniti illum voluptates aperiam ut vitae. Placeat non
-                            officiis excepturi esse iusto! Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
-                            assumenda deleniti sed nisi eligendi voluptate. Deserunt, iusto optio ab quidem, suscipit
-                            cumque est molestiae mollitia inventore, quibusdam eos iste? Nesciunt!</p>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos quo eveniet minus!
-                            Quisquam ullam, fuga amet nulla sed deleniti illum voluptates aperiam ut vitae. Placeat non
-                            officiis excepturi esse iusto! Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
-                            assumenda deleniti sed nisi eligendi voluptate. Deserunt, iusto optio ab quidem, suscipit
-                            cumque est molestiae mollitia inventore, quibusdam eos iste? Nesciunt!</p>
+                        <div>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos quo eveniet minus!
+                                Quisquam ullam, fuga amet nulla sed deleniti illum voluptates aperiam ut vitae. Placeat non
+                                officiis excepturi esse iusto! Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
+                                assumenda deleniti sed nisi eligendi voluptate. Deserunt, iusto optio ab quidem, suscipit
+                                cumque est molestiae mollitia inventore, quibusdam eos iste? Nesciunt!</p>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos quo eveniet minus!
+                                Quisquam ullam, fuga amet nulla sed deleniti illum voluptates aperiam ut vitae. Placeat non
+                                officiis excepturi esse iusto! Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
+                                assumenda deleniti sed nisi eligendi voluptate. Deserunt, iusto optio ab quidem, suscipit
+                                cumque est molestiae mollitia inventore, quibusdam eos iste? Nesciunt!</p>
+                        </div>
+                        <div>
+                            
+                        </div>
                     </div>
                 </div>
             </section>
