--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                 <div class="container-padding container-text-1">
                     <h1>Associação</h1>
                     <h1 class="olharDiferente">Olhar Diferente</h1>
-                    <p><span>Juntos</span>, podemos fazer a <span>diferença</span> na vida dos necessitados. Seja a mudança que o mundo
+                    <p><span>Juntos</span>, podemos fazer a <span>diferença</span> na vida dos necessitados. Seja a
+                        mudança que o mundo
                         precisa - <span>doe</span>, <span>participe</span> e <span>transforme vidas</span>.</p>
                     <a href="#">DOAR</a>
                 </div>
@@ -43,24 +44,23 @@
 
             <section class="secao-2" id="sobre-nos">
                 <div class="container-padding container-text-2">
-                    <h1>Sobre Nós</h1>
                     <div>
-                        <div>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos quo eveniet minus!
-                                Quisquam ullam, fuga amet nulla sed deleniti illum voluptates aperiam ut vitae. Placeat non
-                                officiis excepturi esse iusto! Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
-                                assumenda deleniti sed nisi eligendi voluptate. Deserunt, iusto optio ab quidem, suscipit
-                                cumque est molestiae mollitia inventore, quibusdam eos iste? Nesciunt!</p>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos quo eveniet minus!
-                                Quisquam ullam, fuga amet nulla sed deleniti illum voluptates aperiam ut vitae. Placeat non
-                                officiis excepturi esse iusto! Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
-                                assumenda deleniti sed nisi eligendi voluptate. Deserunt, iusto optio ab quidem, suscipit
-                                cumque est molestiae mollitia inventore, quibusdam eos iste? Nesciunt!</p>
-                        </div>
-                        <div>
-                            
-                        </div>
+                        <h1>Sobre Nós</h1>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos quo eveniet minus!
+                            Quisquam ullam, fuga amet nulla sed deleniti illum voluptates aperiam ut vitae. Placeat non
+                            officiis excepturi esse iusto! Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
+                            assumenda deleniti sed nisi eligendi voluptate. Deserunt, iusto optio ab quidem, suscipit
+                            cumque est molestiae mollitia inventore, quibusdam eos iste? Nesciunt!</p><br>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos quo eveniet minus!
+                            Quisquam ullam, fuga amet nulla sed deleniti illum voluptates aperiam ut vitae. Placeat non
+                            officiis excepturi esse iusto! Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
+                            assumenda deleniti sed nisi eligendi voluptate. Deserunt, iusto optio ab quidem, suscipit
+                            cumque est molestiae mollitia inventore, quibusdam eos iste? Nesciunt!</p>
                     </div>
+                    <div>
+                        <img src="assets/imgs/secao-2.svg" alt="">
+                    </div>
+
                 </div>
             </section>
             <section></section>
@@ -76,4 +76,5 @@
 
     <script src="./assets/js/script.js"></script>
 </body>
+
 </html>
