cards em andamento

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                     </button>
                     <ul>
                         <li><a href="#sobre-nos">SOBRE NÓS</a></li>
-                        <li><a href="#">AÇÕES DO PROJETO</a></li>
-                        <li><a href="#">CONTATO</a></li>
+                        <li><a href="#acoes">AÇÕES DO PROJETO</a></li>
+                        <li><a href="#contato">CONTATO</a></li>
                     </ul>
                 </nav>
             </div>
@@ -63,7 +63,51 @@
 
                 </div>
             </section>
-            <section></section>
+
+            <section class="secao-3" id="acoes">
+                <h1>Ações Do Projeto</h1>
+                <div class="container-padding cards-container">
+                    <div class="card">
+                        <div>
+                            <img src="assets/imgs/img-card-1.jpeg" alt="">
+                        </div>
+                        <div class="container-text-3">
+                            <h2>Movimento Nacional De Voluntariado</h2>
+                            <div>
+                                <p>Rio Branco</p>
+                                <p>21 - Abril a 06 - Junho</p>
+                            </div>
+                            <button>Ver mais</button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div>
+                            <img src="assets/imgs/img-card-2.jpeg" alt="">
+                        </div>
+                        <div class="container-text-3">
+                            <h2>3º Campanha Volta Ás Aulas</h2>
+                            <div>
+                                <p>Rio Branco</p>
+                                <p>6 a 7 - Maio</p>
+                            </div>
+                            <button>Ver mais</button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div>
+                            <img src="assets/imgs/img-card-3.jpeg" alt="">
+                        </div>
+                        <div class="container-text-3">
+                            <h2>Gás Para Todos</h2>
+                            <div>
+                                <p>Rio Branco</p>
+                                <p>25 a 31 - Julho</p>
+                            </div>
+                            <button>Ver mais</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section></section>
             <section></section>
             <section></section>
