--- a/index.html
+++ b/index.html
@@ -67,43 +67,55 @@
             <section class="secao-3" id="acoes">
                 <h1>Ações Do Projeto</h1>
                 <div class="container-padding cards-container">
-                    <div class="card">
+                    <div class="card card-1">
                         <div>
                             <img src="assets/imgs/img-card-1.jpeg" alt="">
                         </div>
                         <div class="container-text-3">
-                            <h2>Movimento Nacional De Voluntariado</h2>
                             <div>
-                                <p>Rio Branco</p>
-                                <p>21 - Abril a 06 - Junho</p>
+                                <h2>Movimento Nacional De Voluntariado</h2>
                             </div>
-                            <button>Ver mais</button>
+                            <div class="text-pai">
+                                <div class="text">
+                                    <p>Rio Branco</p>
+                                    <p>21 - Abril a 06 - Junho</p>
+                                </div>
+                                <button>Ver mais</button>
+                            </div>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card card-2">
                         <div>
                             <img src="assets/imgs/img-card-2.jpeg" alt="">
                         </div>
                         <div class="container-text-3">
-                            <h2>3º Campanha Volta Ás Aulas</h2>
                             <div>
-                                <p>Rio Branco</p>
-                                <p>6 a 7 - Maio</p>
+                                <h2>3º Campanha Volta Ás Aulas</h2>
                             </div>
-                            <button>Ver mais</button>
+                            <div class="text-pai">
+                                <div class="text">
+                                    <p>Rio Branco</p>
+                                    <p>6 a 7 - Maio</p>
+                                </div>
+                                <button>Ver mais</button>
+                            </div>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card card-3">
                         <div>
                             <img src="assets/imgs/img-card-3.jpeg" alt="">
                         </div>
                         <div class="container-text-3">
-                            <h2>Gás Para Todos</h2>
                             <div>
-                                <p>Rio Branco</p>
-                                <p>25 a 31 - Julho</p>
+                                <h2>Gás Para Todos</h2>
                             </div>
-                            <button>Ver mais</button>
+                            <div class="text-pai">
+                                <div class="text">
+                                    <p>Rio Branco</p>
+                                    <p>25 a 31 - Julho</p>
+                                </div>
+                                <button>Ver mais</button>
+                            </div>
                         </div>
                     </div>
                 </div>
