--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/imgs/olhar diferente - logo.png" type="image/x-icon">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Olhar Diferente</title>
 </head>
@@ -60,7 +61,6 @@
                     <div>
                         <img src="assets/imgs/secao-2.svg" alt="">
                     </div>
-
                 </div>
             </section>
 
@@ -120,7 +120,20 @@
                     </div>
                 </div>
             </section>
-            <section></section>
+
+            <section class="secao-4">
+                <div class="container-padding container-4">
+                    <div>
+                        <h2>Quer acompanhar nosso projeto em ação?</h2><br>
+                        <h2>Basta nos seguir nas redes sociais!</h2>
+                    </div>
+                    <div>
+                        <a href=""><i class='bx bxl-instagram'></i></a>
+                        <a href=""><i class='bx bxl-facebook'></i></a>
+                    </div>
+                </div>
+            </section>
+
             <section></section>
             <section></section>
         </main>
