--- a/index.html
+++ b/index.html
@@ -134,12 +134,50 @@
                 </div>
             </section>
 
-            <section></section>
-            <section></section>
+            <section class="secao-5">
+                <div class="container-padding container-5">
+                    <div>
+                        <h2>Você já parou para pensar em como uma pequena contribuição pode fazer uma enorme diferença
+                            na vida de alguém?</h2>
+                        <h2>Cada centavo doado é um passo em direção a um futuro melhor. Seja qual for o valor da
+                            sua doação, ela fará a diferença na vida de alguém que precisa.</h2>
+                        <div class="btn">
+                            <a href="">FAZER UMA DOAÇÃO</a>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="assets/imgs/img-secao-5.svg" alt="">
+                    </div>
+                </div>
+            </section>
+
+            <section class="secao-6" id="contato">
+                <div class="container-padding container-6">
+                    <h1>Contato</h1>
+                    <div class="infos-6">
+                        <div class="container-esquerda">
+                            <h2>Para que possamos mantê-lo(a) informado(a) sobre nosso projeto e
+                                oportunidades de ajudar, gostaríamos de convidá-lo(a) a se inscrever em nossa lista de
+                                e-mails.</h2>
+                        </div>
+                        <div class="container-direita">
+                            <div class="container-email">
+                                <p>Digite seu e-mail:</p>
+                                <input type="email" placeholder="@maria@gmail.com">
+                                <button>ENVIAR</button>
+                            </div>
+                            <div class="container-whatsapp">
+                                <p>Nosso Whatsapp: </p>
+                                <i class='bx bxl-whatsapp'></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <footer>
-
+            
         </footer>
     </div>
 
