--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                             </div>
                             <div class="container-whatsapp">
                                 <p>Nosso Whatsapp: </p>
-                                <i class='bx bxl-whatsapp'></i>
+                                <a href=""><i class='bx bxl-whatsapp'></i></a>
                             </div>
                         </div>
                     </div>
@@ -177,7 +177,7 @@
         </main>
 
         <footer>
-            
+
         </footer>
     </div>
 
