--- a/index.html
+++ b/index.html
@@ -47,16 +47,18 @@
                 <div class="container-padding container-text-2">
                     <div>
                         <h1>Sobre Nós</h1>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos quo eveniet minus!
-                            Quisquam ullam, fuga amet nulla sed deleniti illum voluptates aperiam ut vitae. Placeat non
-                            officiis excepturi esse iusto! Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
-                            assumenda deleniti sed nisi eligendi voluptate. Deserunt, iusto optio ab quidem, suscipit
-                            cumque est molestiae mollitia inventore, quibusdam eos iste? Nesciunt!</p><br>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos quo eveniet minus!
-                            Quisquam ullam, fuga amet nulla sed deleniti illum voluptates aperiam ut vitae. Placeat non
-                            officiis excepturi esse iusto! Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
-                            assumenda deleniti sed nisi eligendi voluptate. Deserunt, iusto optio ab quidem, suscipit
-                            cumque est molestiae mollitia inventore, quibusdam eos iste? Nesciunt!</p>
+                        <p>Somos uma Organização Não-Governamental, laica e sem qualquer ligação política partidária com
+                            órgãos ou instituições políticas, de natureza jurídica sem fins lucrativos, que buscamos
+                            desenvolver diversas ações anualmente, sendo estas realizadas com auxílio de doações
+                            voluntárias, bazar e vendas de rifas.</p><br><br>
+                        <p>O Projeto Olhar Diferente nasceu quando Karoliny Oliveira e suas amigas realizaram uma ação
+                            para levar alegria a crianças carentes, distribuindo produtos de beleza e organizando
+                            atividades recreativas no Hospital da Criança. A partir desse evento inicial, o projeto se
+                            expandiu, incluindo a distribuição de marmitas para moradores de rua e o apoio a famílias
+                            com crianças em extrema pobreza. Inicialmente custeado pelo pai de Karoliny, o projeto
+                            recebeu cada vez mais apoio de amigos e familiares, permitindo a distribuição de mais de
+                            3.000 refeições ao longo de dois anos. O contato com as crianças encantou Karoliny e mudou o
+                            foco do projeto para ajudar famílias com crianças em situação vulnerável.</p>
                     </div>
                     <div>
                         <img src="assets/imgs/secao-2.svg" alt="">
@@ -65,56 +67,58 @@
             </section>
 
             <section class="secao-3" id="acoes">
-                <h1>Ações Do Projeto</h1>
-                <div class="container-padding cards-container">
-                    <div class="card card-1">
-                        <div>
-                            <img src="assets/imgs/img-card-1.jpeg" alt="">
-                        </div>
-                        <div class="container-text-3">
-                            <div>
-                                <h2>Movimento Nacional De Voluntariado</h2>
+                <div class="container-3">
+                    <h1>Ações Do Projeto</h1>
+                    <div class="container-padding cards-container">
+                        <div class="card card-1">
+                            <div class="imagem">
+                                <img src="assets/imgs/img-card-1.jpeg" alt="">
                             </div>
-                            <div class="text-pai">
-                                <div class="text">
-                                    <p>Rio Branco</p>
-                                    <p>21 - Abril a 06 - Junho</p>
+                            <div class="container-text-3">
+                                <div>
+                                    <h2>Movimento Nacional De Voluntariado</h2>
                                 </div>
-                                <button>Ver mais</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card card-2">
-                        <div>
-                            <img src="assets/imgs/img-card-2.jpeg" alt="">
-                        </div>
-                        <div class="container-text-3">
-                            <div>
-                                <h2>3º Campanha Volta Ás Aulas</h2>
-                            </div>
-                            <div class="text-pai">
-                                <div class="text">
-                                    <p>Rio Branco</p>
-                                    <p>6 a 7 - Maio</p>
+                                <div class="text-pai">
+                                    <div class="text">
+                                        <p>Rio Branco</p>
+                                        <p>21 - Abril a 06 - Junho</p>
+                                    </div>
+                                    <button>Ver mais</button>
                                 </div>
-                                <button>Ver mais</button>
                             </div>
                         </div>
-                    </div>
-                    <div class="card card-3">
-                        <div>
-                            <img src="assets/imgs/img-card-3.jpeg" alt="">
-                        </div>
-                        <div class="container-text-3">
-                            <div>
-                                <h2>Gás Para Todos</h2>
+                        <div class="card card-2">
+                            <div class="imagem">
+                                <img src="assets/imgs/img-card-2.jpeg" alt="">
                             </div>
-                            <div class="text-pai">
-                                <div class="text">
-                                    <p>Rio Branco</p>
-                                    <p>25 a 31 - Julho</p>
+                            <div class="container-text-3">
+                                <div>
+                                    <h2>3º Campanha Volta Ás Aulas</h2>
                                 </div>
-                                <button>Ver mais</button>
+                                <div class="text-pai">
+                                    <div class="text">
+                                        <p>Rio Branco</p>
+                                        <p>6 a 7 - Maio</p>
+                                    </div>
+                                    <button>Ver mais</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card card-3">
+                            <div class="imagem">
+                                <img src="assets/imgs/img-card-3.jpeg" alt="">
+                            </div>
+                            <div class="container-text-3">
+                                <div>
+                                    <h2>Gás Para Todos</h2>
+                                </div>
+                                <div class="text-pai">
+                                    <div class="text">
+                                        <p>Rio Branco</p>
+                                        <p>25 a 31 - Julho</p>
+                                    </div>
+                                    <button>Ver mais</button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -163,7 +167,7 @@
                         <div class="container-direita">
                             <div class="container-email">
                                 <p>Digite seu e-mail:</p>
-                                <input type="email" placeholder="@maria@gmail.com">
+                                <input type="email" placeholder="maria@gmail.com">
                                 <button>ENVIAR</button>
                             </div>
                             <div class="container-whatsapp">
@@ -177,7 +181,19 @@
         </main>
 
         <footer>
+            <div class="container-padding container-footer">
+                <div class="container-esquerda">
+                    <img src="assets/imgs/olhar diferente - logo.png" alt="">
+                    <h2>OlharDiferente</h2>
+                </div>
 
+                <div class="container-direita">
+                    <i class='bx bxl-instagram'></i>
+                    <i class='bx bxl-facebook'></i>
+                    <i class='bx bxl-whatsapp'></i>
+                </div>
+            </div>
+            <p>© 2023 projeto de extensão</p>
         </footer>
     </div>
 
