algumas coisas resolvidas

--- a/index.html
+++ b/index.html
@@ -188,13 +188,14 @@
                 </div>
 
                 <div class="container-direita">
-                    <i class='bx bxl-instagram'></i>
-                    <i class='bx bxl-facebook'></i>
-                    <i class='bx bxl-whatsapp'></i>
+                    <a href=""><i class='bx bxl-instagram'></i></a>
+                    <a href=""><i class='bx bxl-facebook'></i></a>
+                    <a href=""><i class='bx bxl-whatsapp'></i></a>
                 </div>
             </div>
             <p>© 2023 projeto de extensão</p>
         </footer>
+
     </div>
     <script src="./assets/js/script.js"></script>
 </body>
