--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <button class="btn-menu" id="btn-js">
                         <span id="hamburguer"></span>
                     </button>
-                    <ul>
+                    <ul class="link-interno-js">
                         <li><a href="#sobre-nos">SOBRE NÓS</a></li>
                         <li><a href="#acoes">AÇÕES DO PROJETO</a></li>
                         <li><a href="#contato">CONTATO</a></li>
