--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
             </section>
 
-            <section class="secao-2" id="sobre-nos">
+            <section class="secao-2 section-js" id="sobre-nos">
                 <div class="container-padding container-text-2">
                     <div>
                         <h1>Sobre Nós</h1>
@@ -66,7 +66,7 @@
                 </div>
             </section>
 
-            <section class="secao-3" id="acoes">
+            <section class="secao-3 section-js" id="acoes">
                 <div class="container-3">
                     <h1>Ações Do Projeto</h1>
                     <div class="container-padding cards-container">
@@ -155,7 +155,7 @@
                 </div>
             </section>
 
-            <section class="secao-6" id="contato">
+            <section class="secao-6 section-js" id="contato">
                 <div class="container-padding container-6">
                     <h1>Contato</h1>
                     <div class="infos-6">
