--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                         <h2>Basta nos seguir nas redes sociais!</h2>
                     </div>
                     <div>
-                        <a href=""><i class='bx bxl-instagram'></i></a>
-                        <a href=""><i class='bx bxl-facebook'></i></a>
+                        <a href="https://www.instagram.com/projetoolhardiferente"><i class='bx bxl-instagram'></i></a>
+                        <a href="https://www.facebook.com/projetoolhardiferente/"><i class='bx bxl-facebook'></i></a>
                     </div>
                 </div>
             </section>
@@ -189,7 +189,7 @@
                             </div>
                             <div class="container-whatsapp">
                                 <p>Nosso Whatsapp: </p>
-                                <a href=""><i class='bx bxl-whatsapp'></i></a>
+                                <a href="https://wa.me/5568999067171?text=oiii"><i class='bx bxl-whatsapp'></i></a>
                             </div>
                         </div>
                     </div>
@@ -205,9 +205,9 @@
                 </div>
 
                 <div class="container-direita">
-                    <a href=""><i class='bx bxl-instagram'></i></a>
-                    <a href=""><i class='bx bxl-facebook'></i></a>
-                    <a href=""><i class='bx bxl-whatsapp'></i></a>
+                    <a href="https://www.instagram.com/projetoolhardiferente"><i class='bx bxl-instagram'></i></a>
+                    <a href="https://www.facebook.com/projetoolhardiferente/"><i class='bx bxl-facebook'></i></a>
+                    <a href="https://wa.me/5568999067171?text=oiii"><i class='bx bxl-whatsapp'></i></a>
                 </div>
             </div>
             <p>© 2023 projeto de extensão</p>
